= 2.3.1    - 17/01/2023
* Enhance  - Fetch Form templates from remote server.
* Fix 	   - XSS vulnerability in field settings.
* Fix 	   - Flatpickr throwing an error in console.
* Fix 	   - LearnDash slug typo in extemsions page.
* Fix      - Disallow Reset Password for not approved users.
* Fix      - Invalid argument warning while fetching form settings.
* Fix      - Registration form id with which user is registered referenced in edit profile form.

= 2.3.0    - 02/01/2023
* Feature  - CAPTCHA verification on lost password page.​
* Dev      - Add hook to hold success message before redirect.
* Dev      - Add functions to get login and my account page urls.
* Tweak    - New addons in extensions page.​
* Tweak    - Delete popup modal layout size changes.​
* Tweak    - Add UR tag for selected my account page.​
* Tweak    - Collapse accordion by default except general in form builder. ​
* Tweak    - Submit Button Class, Text, Form Class label and tooltip text changes.​
* Fix      - PHP 8.1 Compatibility issue​s.
* Fix      - Forms table sorting by latest update.​
* Fix      - Form Id empty issue in getting started page.​
* Fix      - Misplaced error message for url fields.​
* Fix      - Field not appended in the droppable zone.​
* Fix      - Errors and warnings in the browser console.​
* Fix      - Show Password icon for Extra Password field.​
* Fix      - Smart tag for country field in email content.
* Fix      – My Account endpoint translation issue in WPML.​
* Fix      - Gutenberg compatibility issue with my account.
* Fix      - User export issue when form name has special characters.​
* Fix      - User export issue while checkbox or multi-select2 exists.​
* Fix      - Form not submitting issue while captcha keys are not set.​
* Fix      - Form submitting when error message exists for file upload.
* Fix      – Special Character in Password Field caused invalid password while login.​