@@ -4,6 +4,7 @@
 * Fix 	   - Flatpickr throwing an error in console.
 * Fix 	   - LearnDash slug typo in extemsions page.
 * Fix      - Disallow Reset Password for not approved users.
+* Fix 	   - Profile picture being removed while updating profile.
 * Fix      - Invalid argument warning while fetching form settings.
 * Fix      - Registration form id with which user is registered referenced in edit profile form.
 
